--- a/CS50W/hello/list.html
+++ b/CS50W/hello/list.html
@@ -4,9 +4,17 @@
         <title>Hello!</title>
     </head>
     <body>
+        An Unorder List:
+        <ul>
+            <li>First Item</li>
+            <li>Second Item</li>
+            <li>Third Item</li>
+        </ul>
         An Order List:
         <ol>
-            
+            <li>First Item</li>
+            <li>Second Item</li>
+            <li>Third Item</li>
         </ol>
     </body>
 </html>
