--- a/CS50W/css/style.html
+++ b/CS50W/css/style.html
@@ -2,12 +2,14 @@
 <html>
     <head>
         <title>Hello!</title>
-        <style>
+        
+        <link rel="stylesheet" href="style.css">
+        <!-- <style>
             h1 {
                 color:blue;
                 text-align: center;
             } 
-        </style>
+        </style> -->
     </head>
     <body>
         <h1>Welcome to my Web Page!</h1>
