--- a/CS50W/html/table.html
+++ b/CS50W/html/table.html
@@ -2,6 +2,16 @@
 <html>
     <head>
         <title>Table</title>
+        <style>
+            table {
+                /* Border of table */
+                border: 1px solid black;
+            }
+
+            td, th {
+                border: 1px solid black;
+            }
+        </style>
     </head>
     <body>
         <table>
