--- a/CS50W/css/style.html
+++ b/CS50W/css/style.html
@@ -2,18 +2,12 @@
 <html>
     <head>
         <title>Hello!</title>
-        
         <link rel="stylesheet" href="style.css">
-        <!-- <style>
-            h1 {
-                color:blue;
-                text-align: center;
-            } 
-        </style> -->
     </head>
     <body>
-        <h1>Welcome to my Web Page!</h1>
-        <h1>This is a second heading</h1>
-        Hello, world!
+        <h1 id="head_1">Heading 1</h1>
+        <h1 id="head_2">Heading 2</h1>
+        <h1 class="yeah">Heading 3</h1>
+        <h1 class="yeah">Heading 4</h1>
     </body>
 </html>
